compat-drivers: update genlog-3.8
This updates genlog-3.8 so it adds the extra version postfix
number. Even though the Linux kernel release may remain stable
we may at times make a new release of compat-drivers to update
fixes for backporting.

Signed-off-by: Luis R. Rodriguez <mcgrof@do-not-panic.com>

--- a/scripts/genlog-3.8
+++ b/scripts/genlog-3.8
@@ -6,13 +6,15 @@ COMPAT_WIRELESS=$HOME/devel/compat-drivers/.git
 OLD_VER=7
 let VER="8"
 RC="-rc2"
-LOG="ChangeLog-3.${VER}${RC}"
+export GIT_DIR=${COMPAT_WIRELESS}
+CD_VER="$(git describe | sed -e 's|compat-drivers-||g')"
+LOG="ChangeLog-${CD_VER}"
 
 echo > $LOG
 
-echo -e "===============================================" >> $LOG
-echo -e "ChangeLog for compat-drivers for linux-3.${VER}${RC}" >> $LOG
-echo -e "===============================================" >> $LOG
+echo -e "================================================================" >> $LOG
+echo -e "ChangeLog for $(git describe) based on linux-3.${VER}${RC}" >> $LOG
+echo -e "================================================================" >> $LOG
 
 echo -e "
 This is the ChangeLog for the Linux kernel project compat-drivers.
