compat-drivers: trim 'v' prefix from ChangeLog file
This follows the kernel.org releases as well as our old
releases.

Signed-off-by: Luis R. Rodriguez <mcgrof@do-not-panic.com>

--- a/scripts/genlog-3.7
+++ b/scripts/genlog-3.7
@@ -8,7 +8,7 @@ export GIT_DIR=${COMPAT_DRIVERS}
 OLD_VER=6
 let VER="7"
 RC="-rc1"
-LOG="ChangeLog-$(git describe| sed -e 's|compat-drivers-||')"
+LOG="ChangeLog-$(git describe| sed -e 's|compat-drivers-v||')"
 
 echo > $LOG
 
